@@ -44,6 +44,8 @@ sub formats {
     sort keys %REGEX_FOR;
 }
 
+sub format_matchers { %REGEX_FOR }
+
 sub new {
     my $class = shift;
     bless { default_encoding => 'UTF-8', @_ } => $class;
@@ -185,13 +187,20 @@ Registers a markup parser. You likely won't need to use this method unless
 you're creating a new markup parser and not contributing it back to the
 Text::Markup project. See L</Add a Parser> for details.
 
-=head3 formats
+=head3 C<formats>
 
   my @formats = Text::Markup->formats;
 
 Returns a list of all of the formats currently recognized by Text::Markup.
 This will include all core parsers (except for "None") and any that have been
 loaded elsewhere and that call C<register> to register themselves.
+
+=head3 C<format_matchers>
+
+  my %matchers = Text::Markup->format_matchers;
+
+Returns a list of key/value pairs mapping all the formats returned by
+C<formats> to the regular expressions used to match them.
 
 =head2 Instance Methods
 
